# PneumaLang

./: CMakeLists.txt  README.md
src/: APeregrinatorsTale.h  CMakeLists.txt  Cell.h  Entity.cpp  Entity.h  Game.h  GameMap.h  Language.h  LanguageManager.cpp  LanguageManager.h  MapData.json  MenuManager.h  main.cpp
src/events/: GameEvent.cpp  GameEvent.h  GameEventHandler.cpp  GameEventHandler.h  QuickTime.h
src/humanity/: Civ.h  CivManager.cpp  CivManager.h
src/languages/: Language.h  LanguageManager.cpp  LanguageManager.h
src/map/: Cell.h  GameMap.cpp  GameMap.h  MapData.json  MapMode.h
src/scenes/: Cell.h  GameMap.cpp  GameMap.h  MapData.json  MenuScene.cpp  MenuScene.h  Scene.cpp  Scene.h  SceneData.json  SceneManager.cpp  SceneManager.h  SceneState.h
